--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/main_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
@@ -67,6 +68,7 @@
                     android:textStyle="bold"/>
 
             <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/cardView_preset"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/card_margin"
@@ -76,8 +78,7 @@
                 <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:foreground="?attr/selectableItemBackground"
-                        android:clickable="true">
+                        android:foreground="?attr/selectableItemBackground">
                     <TextView
                             android:id="@+id/textView_selectPreset"
                             android:layout_width="wrap_content"
@@ -106,13 +107,13 @@
                             android:layout_centerInParent="true"
                             android:paddingStart="@dimen/card_content_padding"
                             android:paddingEnd="@dimen/card_content_padding"
-                            android:clickable="true"
-                            android:foreground="?attr/selectableItemBackground"
+                            android:clickable="false"
                             app:srcCompat="@drawable/ic_keyboard_arrow_down_grey_24dp"/>
                 </RelativeLayout>
             </com.google.android.material.card.MaterialCardView>
 
             <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/cardView_backup"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/card_margin"
@@ -122,8 +123,7 @@
                 <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:foreground="?attr/selectableItemBackground"
-                        android:clickable="true">
+                        android:foreground="?attr/selectableItemBackground">
                     <TextView
                             android:id="@+id/textView_backup"
                             android:layout_width="wrap_content"
@@ -147,6 +147,7 @@
             </com.google.android.material.card.MaterialCardView>
 
             <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/cardView_restore"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/card_margin"
@@ -156,8 +157,7 @@
                 <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:foreground="?attr/selectableItemBackground"
-                        android:clickable="true">
+                        android:foreground="?attr/selectableItemBackground">
                     <TextView
                             android:id="@+id/textView_restore"
                             android:layout_width="wrap_content"
