--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,7 @@
     <color name="black">#000000</color>
     <color name="grey">#616161</color>
     <color name="lightGrey">#DADCE0</color>
+
+    <color name="white">#fff</color>
+    <color name="highlight_light">#33ffffff</color>
 </resources>
