--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,17 @@
     <dimen name="card_corner_radius">6.0dp</dimen>
     <dimen name="card_content_padding">12.0dp</dimen>
     <dimen name="card_header">20.0sp</dimen>
+
+    <!--Dialog-->
+    <dimen name="dialog_rounded_corner">8dp</dimen>
+    <dimen name="dialog_vertical_margin">32dp</dimen>
+    <dimen name="dialog_horizontal_margin">32dp</dimen>
+    <dimen name="dialog_elevation">24dp</dimen>
+    <dimen name="padding_borderless_button">16dp</dimen>
+
+    <dimen name="margin_normal">16dp</dimen>
+    <dimen name="margin_small">8dp</dimen>
+    <dimen name="margin_large">32dp</dimen>
+    <dimen name="spacing_normal">8dp</dimen>
+    <dimen name="spacing_micro">4dp</dimen>
 </resources>
