--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,8 +25,46 @@
         <item name="android:textColorSecondary">@color/colorPrimary</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="AppTheme" />
-    <style name="AppTheme.PopupOverlay" parent="AppTheme" />
+    <style name="AppTheme.AppBarOverlay" parent="AppTheme"/>
+    <style name="AppTheme.PopupOverlay" parent="AppTheme"/>
+
+    <style name="CustomDialog">
+        <item name="android:background">@drawable/dialog_background</item>
+        <item name="android:elevation">@dimen/dialog_elevation</item>
+    </style>
+
+    <style name="TextAppearance.DialogTitle" parent="@style/TextAppearance.AppCompat.Title">
+        <item name="android:textSize">22sp</item>
+        <item name="android:gravity">start</item>
+    </style>
+
+    <style name="TextAppearance.DialogContent" parent="@style/TextAppearance.AppCompat.Body1">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">?android:textColorSecondary</item>
+        <item name="android:gravity">start</item>
+    </style>
+
+    <style name="Widget.BorderlessButton" parent="@style/Widget.MaterialComponents.Button.TextButton">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">?colorAccent</item>
+        <item name="android:letterSpacing">0.025</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:paddingLeft">24dp</item>
+        <item name="android:paddingRight">24dp</item>
+        <item name="android:paddingTop">@dimen/padding_borderless_button</item>
+        <item name="android:paddingBottom">@dimen/padding_borderless_button</item>
+    </style>
+
+    <style name="Widget.RaisedButton" parent="@style/Widget.AppCompat.Button.Colored">
+        <item name="android:textStyle">bold</item>
+        <item name="android:background">@drawable/raised_button_background</item>
+        <item name="android:letterSpacing">0.025</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:paddingLeft">24dp</item>
+        <item name="android:paddingRight">24dp</item>
+        <item name="android:paddingTop">12dp</item>
+        <item name="android:paddingBottom">12dp</item>
+    </style>
 
     <style name="ProgressDialog">
         <item name="DialogTitleAppearance">@android:style/TextAppearance.Medium</item>
