--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,10 @@
         <item name="android:colorBackground">@color/colorPrimaryDark</item>
     </style>
 
+    <style name="AppTheme.Restore" parent="AppTheme">
+
+    </style>
+
     <style name="AppTheme.CustomHeaderText" parent="AppTheme.AppBarOverlay">
         <item name="android:textColor">@color/grey</item>
     </style>
