--- a/app/src/main/res/drawable/launch_screen.xml
+++ b/app/src/main/res/drawable/launch_screen.xml
@@ -2,16 +2,9 @@
 <layer-list
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:opacity="opaque">
+    <item android:drawable="@color/colorAccent"/>
     <item>
-        <shape>
-            <solid android:color="@color/white"/>
-        </shape>
-    </item>
-
-    <item android:height="180dp"
-          android:gravity="bottom">
-        <shape android:shape="rectangle">
-            <solid android:color="@color/colorAccent"/>
-        </shape>
+        <bitmap android:src="@drawable/launch_screen_icon"
+                android:gravity="center"/>
     </item>
 </layer-list>
